5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1692_1105.log
== TEST (2019-04-27 11:41:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saíd
brasao = input("descricao do brasao: ")
if(brasao == lobo):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao == leao):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao == veado):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao == dragao):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao == rosa):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao == sol):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao == lula):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao == esfolado):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao == turta):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada",brasao)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:42:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saíd
brasao = input("descricao do brasao: ")
if(brasao == "lobo"):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao == "dragao"):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada",brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:43:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saíd
brasao = input("descricao do brasao: ")
if(brasao == "lobo"):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao == "dragao"):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada:",brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 11:43:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saíd
brasao = input("descricao do brasao: ")
if(brasao == "lobo"):
	print("Entrada:",brasao)
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Entrada:",brasao)
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Entrada:",brasao)
	print("Casa: Baratheon")
elif(brasao == "dragao"):
	print("Entrada:",brasao)
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Entrada:",brasao)
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Entrada:",brasao)
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Entrada:",brasao)
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Entrada:",brasao)
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Entrada:",brasao)
	print("Casa: Tully")
else:
	print("Entrada:",brasao)
	print("Brasao invalido")
-- EXECUTION TIME:
0.172411
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
